# HxhLanguage

./: .gitignore  CMakeLists.txt  README.md  TermuxPackage.sh  config.txt  hxhlang_0.114_aarch64.deb
TermuxPackage/DEBIAN/: control  postinst  prerm
TermuxPackage/data/data/com.termux/files/usr/share/doc/hxlanguage/: copyright
docs/: Grammar.md
docs/examples/: ConditionJumping.hxl  ConditionJumping.hxo  DefineVariable.hxl  DefineVariable.hxo  Repeat.hxl  Repeat.hxo  定义变量.hxl  循环.hxl  条件跳转.hxo
docs/hxc/: hxc.1
src/HXC/: Checker.h  Class.h  Error.h  Generator.h  IR.h  Lexer.h  Main.cpp  ObjectCode.h  Parser.h  Scanner.h  SymbolTable.h  config.h
src/HXC/GUIMenu/: GUIMenu.h
src/HXVM/: Interpreter.h  Main.cpp  ObjectReader.h  config.h
test/: Test.java  out  out.hxo  test.hxl  test.hxl.bak
